# gnoise

./: .gitignore  CMakeLists.txt  README.md
gnoise/: CMakeLists.txt  main.cpp
gnoise/include/: common.hpp  gnoise.hpp
gnoise/include/modules/: noise_module.cpp  noise_module.hpp
gnoise/include/modules/generators/: noise_generator_module.cpp  noise_generator_module.hpp  noise_generator_module_gpu_code.hpp
gnoise/include/modules/generators/billow/: noise_billow_generator_module.cpp  noise_billow_generator_module.hpp  noise_billow_generator_module_gpu_code.hpp
gnoise/include/modules/generators/checkerboard/: noise_checkerboard_generator_module.cpp  noise_checkerboard_generator_module.hpp  noise_checkerboard_generator_module_gpu_code.hpp
gnoise/include/modules/generators/const/: noise_const_generator_module.cpp  noise_const_generator_module.hpp
gnoise/include/modules/generators/cylinders/: noise_cylinders_generator_module.cpp  noise_cylinders_generator_module.hpp  noise_cylinders_generator_module_gpu_code.hpp
gnoise/include/modules/generators/perlin/: noise_perlin_generator_module.cpp  noise_perlin_generator_module.hpp  noise_perlin_generator_module_gpu_code.hpp
gnoise/include/modules/generators/ridged_multifractal/: noise_ridged_multifractal_generator_module.cpp  noise_ridged_multifractal_generator_module.hpp  noise_ridged_multifractal_generator_module_gpu_code.hpp
gnoise/include/modules/generators/spheres/: noise_spheres_generator_module.cpp  noise_spheres_generator_module.hpp  noise_spheres_generator_module_gpu_code.hpp
gnoise/include/modules/generators/voronoi/: noise_voronoi_generator_module.cpp  noise_voronoi_generator_module.hpp  noise_voronoi_generator_module_gpu_code.hpp
gnoise/include/modules/non_generator_modules/: noise_non_generator_module.cpp  noise_non_generator_module.hpp
gnoise/include/modules/non_generator_modules/combiners/: noise_combiner_module.hpp
gnoise/include/modules/non_generator_modules/miscellaneous/: noise_miscellaneous_module.hpp
gnoise/include/modules/non_generator_modules/modifiers/: noise_modifier_module.hpp
gnoise/include/modules/non_generator_modules/modifiers/base/: noise_base_module.cpp  noise_base_module.hpp
gnoise/include/modules/non_generator_modules/modifiers/clamp/: noise_clamp_module.cpp  noise_clamp_module.hpp
gnoise/include/modules/non_generator_modules/modifiers/exponent/: noise_exponent_module.cpp  noise_exponent_module.hpp
gnoise/include/modules/non_generator_modules/modifiers/scale_bias/: noise_scale_bias_module.cpp  noise_scale_bias_module.hpp
gnoise/include/modules/non_generator_modules/other/: noise_other_module.hpp
gnoise/include/modules/non_generator_modules/selectors/: noise_selector_module.hpp
gnoise/include/modules/non_generator_modules/selectors/blend/: noise_blend_module.cpp  noise_blend_module.hpp
gnoise/include/modules/non_generator_modules/selectors/select/: noise_select_module.cpp  noise_select_module.hpp
gnoise/include/modules/non_generator_modules/transformers/: noise_transformer_module.hpp
gnoise/include/modules/non_generator_modules/transformers/displace/: noise_displace_module.cpp  noise_displace_module.hpp
gnoise/include/modules/non_generator_modules/transformers/linear_transformer/: noise_linear_transformer_module.hpp
gnoise/include/modules/non_generator_modules/transformers/linear_transformer/rotate_point/: noise_rotate_point_module.cpp  noise_rotate_point_module.hpp
gnoise/include/modules/non_generator_modules/transformers/linear_transformer/scale_point/: noise_scale_point_module.cpp  noise_scale_point_module.hpp
gnoise/include/modules/non_generator_modules/transformers/linear_transformer/translate_point/: noise_translate_point_module.cpp  noise_translate_point_module.hpp
gnoise/include/modules/non_generator_modules/transformers/turbulence/: noise_turbulence_module.cpp  noise_turbulence_module.hpp
gnoise_NET_exports/: CMakeLists.txt  exports.cpp
gnoise_preview/: CMakeLists.txt  WND.hpp  common.hpp  main.cpp
gnoise_preview/delegates/: additional_delegates.cpp  additional_delegates.hpp
gnoise_preview/flow_chart/: default_flow_chart_scene.cpp  default_flow_chart_scene.hpp  default_flow_chart_view.cpp  default_flow_chart_view.hpp  flow_chart_common.hpp  flow_chart_view_base.cpp  flow_chart_view_base.hpp
gnoise_preview/flow_chart/flow_chart_base/: link_base.cpp  link_base.hpp  node_base.cpp  node_base.hpp  pin_base.cpp  pin_base.hpp
gnoise_preview/flow_chart/flow_chart_default/: default_flowchart_common.hpp  default_link.cpp  default_link.hpp  default_node.cpp  default_node.hpp  default_pin.cpp  default_pin.hpp
gnoise_preview/models/: module_models.cpp  module_models.hpp
gnoise_preview/node_editor/: node.cpp  node.hpp
gnoise_preview/node_editor/node_model/: link.cpp  link.hpp  model_common.hpp  node.cpp  node.hpp  pin.cpp  pin.hpp
gnoise_preview/node_editor_scene/: node_editor_scene.cpp  node_editor_scene.hpp
gnoise_preview/preview_flow_chart/: preview_common.hpp
gnoise_preview/preview_flow_chart/module_data/: module_data.cpp  module_data.hpp
gnoise_preview/preview_flow_chart/module_model/: module_model.cpp  module_model.hpp
gnoise_preview/preview_flow_chart/module_nodes/: module_nodes.hpp
gnoise_preview/preview_flow_chart/preview_base/: preview_node_base.cpp  preview_node_base.hpp  preview_node_title.cpp  preview_node_title.hpp  preview_pin_base.cpp  preview_pin_base.hpp
gnoise_preview/preview_flow_chart/result_node/: result_node.cpp  result_node.hpp  result_node_image.cpp  result_node_image.hpp
gnoise_preview/preview_flow_chart/view/: preview_flow_chart_view.cpp  preview_flow_chart_view.hpp
gnoise_preview/preview_flow_chart/widget/: preview_widget.cpp  preview_widget.hpp
gnoise_tests/: CMakeLists.txt  main.cpp
